# Kicad-Planar-Magnetics-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
designs/: INDEX.md  demo_plt32_400V_24V_220W_LLC.kicad_pcb  inductor_2layer_circular.kicad_pcb  inductor_4layer_octagon.kicad_pcb  inductor_multileg_3leg.kicad_pcb  inductor_round_core.kicad_pcb  inductor_stack_4x2layer_board1of4.kicad_pcb  inductor_stack_4x2layer_board2of4.kicad_pcb  inductor_stack_4x2layer_board3of4.kicad_pcb  inductor_stack_4x2layer_board4of4.kicad_pcb  topology_comparison.txt  transformer_2to1_circular.kicad_pcb  transformer_E32_3C95.kicad_pcb  transformer_rect_core_racetrack.kicad_pcb  transformer_stack_3boards_board1of3.kicad_pcb  transformer_stack_3boards_board2of3.kicad_pcb  transformer_stack_3boards_board3of3.kicad_pcb  wirewound_to_planar.txt
examples/: convert_and_cores.py  demo_plt32_llc.py  generate_all.py  make_inductor.py  make_stack.py  make_transformer.py  physics_and_sizing.py
planarmag/: __init__.py  __main__.py  cli.py  convert.py  core.py  core_data.py  devices.py  geometry.py  kicad.py  materials.py  physics.py  preview.py  shapes.py  sizing.py  topology.py  windings.py
tests/: test_planarmag.py
